# codegraft

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  test-plan.md
.features/: affected-tests-improvements.md  cautions-and-pushbacks.md  css-and-named-fixture-ranking.md  experiment-meshimate-ab.md  intent-aware-role-weighting.md  project-report-and-blueprint.md  remaining-to-mvp.md
.features/done/: intent-aware-role-weighting.md  read-side-context-tools.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/demo_requests/: add-rbac.md
examples/sample_plans/: add-rbac.md
skills/codegraft-context/: SKILL.md
src/codegraft/: __init__.py  branding.py  cli.py  config.py  errors.py  evaluation.py  evaluation_graph.py  evaluation_symbol.py  mcp.py
src/codegraft/models/: __init__.py  plan.py  repo.py
src/codegraft/planning/: __init__.py  filenames.py  renderer.py  service.py
src/codegraft/prompts/: __init__.py  planner_system.md
src/codegraft/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompt.py
src/codegraft/repo/: __init__.py  analyze.py  detect.py  discover.py  git_scan.py  graph.py  ignore.py  imports.py  rank.py  safety.py  snippets.py  summarize.py  symbols.py  tree.py
src/codegraft/utils/: text.py  tokens.py
tests/: conftest.py  sample_plan.py  test_cli.py  test_detect.py  test_discovery.py  test_eval.py  test_eval_graph.py  test_filenames.py  test_graph.py  test_ignore.py  test_mcp.py  test_providers.py  test_rank.py  test_renderer.py  test_snippets.py  test_symbols.py  test_text.py  test_tokens.py
