[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraft"
version = "0.1.0"
description = "A local-first implementation-planning CLI: turn a feature request plus a real repository into a structured, evidence-backed engineering plan for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Benston" }]
keywords = ["cli", "llm", "planning", "codebase", "anthropic", "openai"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pathspec>=0.12",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
mcp = ["mcp>=1.2"]
all = ["anthropic>=0.40", "openai>=1.40", "mcp>=1.2"]
dev = ["pytest>=8.2", "pytest-cov>=5.0"]

[project.scripts]
codegraft = "codegraft.cli:app"
codegraft-mcp = "codegraft.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_anthropic: hits the real Anthropic API (opt-in, needs ANTHROPIC_API_KEY)",
    "live_openai: hits the real OpenAI API (opt-in, needs OPENAI_API_KEY)",
]
