[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraft"
version = "0.1.0"
description = "A local-first implementation-planning CLI: turn a feature request plus a real repository into a structured, evidence-backed engineering plan for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Benston" }]
keywords = ["cli", "llm", "planning", "codebase", "anthropic", "openai"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pathspec>=0.12",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
mcp = ["mcp>=1.2"]
all = ["anthropic>=0.40", "openai>=1.40", "mcp>=1.2"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
codegraft = "codegraft.cli:app"
codegraft-mcp = "codegraft.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraft"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, non-fussy default set: pyflakes (F), pycodestyle (E/W),
# isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length is advisory here, not a CI gate
    "B008",   # Typer's API *is* function-calls-in-defaults (typer.Option/Argument)
    "UP042",  # StrEnum changes str() semantics; keep the explicit (str, Enum) base
]

[tool.ruff.lint.per-file-ignores]
# cli.py reconfigures stdout/stderr to UTF-8 *before* importing modules that may
# emit (E402), and re-raises typer.Exit after printing a clean message at the CLI
# boundary, where exception chaining only adds noise (B904).
"src/codegraft/cli.py" = ["E402", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_anthropic: hits the real Anthropic API (opt-in, needs ANTHROPIC_API_KEY)",
    "live_openai: hits the real OpenAI API (opt-in, needs OPENAI_API_KEY)",
]
